# Sudoku-Solver

./: .gitignore  .gitmodules  CMakeLists.txt
headers/: core.h  utils.h
sources/: main.cpp
sources/core/: solver.cpp  sudoku.cpp
sources/utils/: helper.cpp
tests/: test.cpp
tests/4/: input
tests/5/: input
tests/7/: input
tests/8/: input
tests/inputs/: 1  10  11  2  3  4  5  6  7  8  9
tests/outputs/: 2
tests/solutions/: 1  10  11  2  3  4  5  6  7  8  9
